syntax = "proto3";

package v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
//import "google/protobuf/wrappers.proto";

message News{
    // message body
    string id = 1; // News ID
    string title = 2; // News Title
    string text = 3; //  News Text
    string thumbnailUrl = 4; // News thumbnailUrl
    google.protobuf.Timestamp timestamp = 5; // News created timestamp
    string uid = 6; // News Author ID
}

message NewNews{
    string title = 1; // News Title
    string text = 2; //  News Text
    string thumbnailUrl = 3; // News thumbnailUrl
    string uid = 4; // News Author ID
}

message RequestNewsID{
    string id = 1; // News ID
}

service NewsService {
    rpc AddNews (NewNews) returns (google.protobuf.Empty) {}
    rpc GetNewsID (RequestNewsID) returns (News) {}
    rpc StreamNews (google.protobuf.Empty) returns (stream News) {}
}
